# fossdev

./: .gitignore  Makefile  NETWORKING_NOTES.md  PracticeMakefile  docker-compose.yaml  script.py  test.py
discount-service/: Dockerfile  pyproject.toml
discount-service/src/app/: main.py
docs_domain/: Makefile  setup.py
docs_domain/docs/: DOMAIN.md
docs_domain/docs-/source/: QUICKSTART.md  USAGE.rst  conf.py  index.rst
docs_domain/src/: sales.py
file_exchanger/docs/: context.drawio  sequence.drawio  use_cases.drawio
makeutil/: setup.py
makeutil/util/: Makefile  setup.py
makeutil/util/src/: http_conn.py
makeutil/util/tests/: test_util.py
order_service/: Dockerfile  Makefile  pyproject.toml
order_service/src/app/: main.py
product_service/: pyproject.toml
testing/frameworks/: setup.py
testing/frameworks/src/tax/: income.py
testing/frameworks/tests/tax/: test_income.py  test_income_pytest.py  test_income_unittest.py
testing/principle/: setup.py
testing/principle/src/: math_demo.py
testing/principle/tests/: test_princinples.py
testing/tdd/: Makefile  setup.py
testing/tdd/src/: ndfl.py
testing/tdd/tests/: test_basic_ndfl.py
