[project]
name = "discount-service"
version = "0.0.1"
description = "Service for calculate price"
authors = [
    {name = "Monke",email = "chikindin99@inbox.ru"}
]
license = "MTI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
