[project]
name = "product-service"
version = "0.0.1"
description = "product service for user"
authors = [
    {name = "Monke",email = "chikindin99@inbox.ru"}
]
license = "MTI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standart] (>=0.46.0,<0.47.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
